produce wrapperless images

--- a/container_images/gocheck/Dockerfile
+++ b/container_images/gocheck/Dockerfile
@@ -17,6 +17,7 @@ ENV GOOGLE_APPLICATION_CREDENTIALS /etc/compute-image-tools-test-service-account
 
 RUN apt-get update && apt-get install -y git && \
     rm -rf /var/cache/apt/archives
+RUN go get -u golang.org/x/lint/golint
 
 COPY main.sh main.sh
 ENTRYPOINT ["./main.sh"]
