Include gs:// in the bucket path name

--- a/container_images/osconfig-agent-packaging/Dockerfile
+++ b/container_images/osconfig-agent-packaging/Dockerfile
@@ -21,13 +21,6 @@ RUN apk add --update bash git
 
 FROM golang
 
-ENV BASE_REPO GoogleCloudPlatform
-ENV PKG_GCS_OUT_DIR osconfig-agent-package
-
-RUN mkdir -p /go/src
-RUN go get -d github.com/${BASE_REPO}/osconfig
-COPY . /go/src
-
 ENV GOOGLE_APPLICATION_CREDENTIALS /etc/compute-image-tools-test/creds.json
 ENV GOPATH /go
 
@@ -36,9 +29,7 @@ COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.
 WORKDIR /
 COPY --from=1 /daisy daisy
 
-WORKDIR /go/src/github.com/${BASE_REPO}/osconfig
-
 # Copy this Dockerfile for debugging.
 COPY Dockerfile Dockerfile
-COPY main.sh main.sh
-ENTRYPOINT ["./main.sh"]
+COPY daisy_build_upload.sh daisy_build_upload.sh
+ENTRYPOINT ["./daisy_build_upload.sh"]
