--- a/container_images/daisy_build_upload/Dockerfile
+++ b/container_images/daisy_build_upload/Dockerfile
@@ -16,11 +16,13 @@ FROM gcr.io/compute-image-tools/daisy:latest
 FROM alpine
 
 RUN apk add --no-cache bash
-
+# Should this be set by the prow config? Creds are provided by it.
 ENV GOOGLE_APPLICATION_CREDENTIALS /etc/daisy-service-account/creds.json
 
 WORKDIR /
 COPY --from=0 /daisy daisy
+# Daisy image copies this from gcr.io/distroless/base, we copy here.
+COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
 # Copy this Dockerfile for debugging.
 COPY Dockerfile Dockerfile
