--- a/container_images/cloudbuild.yaml
+++ b/container_images/cloudbuild.yaml
@@ -7,6 +7,8 @@ steps:
   args: ['build', '--tag=gcr.io/$PROJECT_ID/gotest:latest', '--tag=gcr.io/$PROJECT_ID/gotest:$COMMIT_SHA', './container_images/gotest']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '--tag=gcr.io/$PROJECT_ID/daisy-builder:latest', '--tag=gcr.io/$PROJECT_ID/daisy-builder:$COMMIT_SHA', './container_images/daisy-builder']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/selinux-tools:latest', '--tag=gcr.io/$PROJECT_ID/selinux-tools:$COMMIT_SHA', './container_images/selinux-tools']
 
 images:
   - 'gcr.io/$PROJECT_ID/gocheck:latest'
@@ -17,3 +19,5 @@ images:
   - 'gcr.io/$PROJECT_ID/gotest:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/daisy-builder:latest'
   - 'gcr.io/$PROJECT_ID/daisy-builder:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/selinux-tools:latest'
+  - 'gcr.io/$PROJECT_ID/selinux-tools:$COMMIT_SHA'
