--- a/container_images/cloudbuild.yaml
+++ b/container_images/cloudbuild.yaml
@@ -9,6 +9,8 @@ steps:
   args: ['build', '--tag=gcr.io/$PROJECT_ID/daisy-builder:latest', '--tag=gcr.io/$PROJECT_ID/daisy-builder:$COMMIT_SHA', './container_images/daisy-builder']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '--tag=gcr.io/$PROJECT_ID/selinux-tools:latest', '--tag=gcr.io/$PROJECT_ID/selinux-tools:$COMMIT_SHA', './container_images/selinux-tools']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/build-essential:latest', '--tag=gcr.io/$PROJECT_ID/build-essential:$COMMIT_SHA', './container_images/build-essential']
 
 images:
   - 'gcr.io/$PROJECT_ID/gocheck:latest'
@@ -21,3 +23,5 @@ images:
   - 'gcr.io/$PROJECT_ID/daisy-builder:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/selinux-tools:latest'
   - 'gcr.io/$PROJECT_ID/selinux-tools:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/build-essential:latest'
+  - 'gcr.io/$PROJECT_ID/build-essential:$COMMIT_SHA'
