--- a/container_images/cloudbuild.yaml
+++ b/container_images/cloudbuild.yaml
@@ -11,7 +11,12 @@ steps:
   args: ['build', '--tag=gcr.io/$PROJECT_ID/selinux-tools:latest', '--tag=gcr.io/$PROJECT_ID/selinux-tools:$COMMIT_SHA', './container_images/selinux-tools']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '--tag=gcr.io/$PROJECT_ID/build-essential:latest', '--tag=gcr.io/$PROJECT_ID/build-essential:$COMMIT_SHA', './container_images/build-essential']
-
+- name: 'gcr.io/cloud-builders/go'
+  dir: './autoversioner'
+  args: ['install', './cmd/...']
+  env: ['PROJECT_ROOT=github.com/GoogleCloudPlatform/guest-test-infra']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/autoversioner:latest', '--tag=gcr.io/$PROJECT_ID/autoversioner:$COMMIT_SHA', '-f', './container_images/autoversioner/Dockerfile', './autoversioner/']
 images:
   - 'gcr.io/$PROJECT_ID/gocheck:latest'
   - 'gcr.io/$PROJECT_ID/gocheck:$COMMIT_SHA'
@@ -25,3 +30,5 @@ images:
   - 'gcr.io/$PROJECT_ID/selinux-tools:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/build-essential:latest'
   - 'gcr.io/$PROJECT_ID/build-essential:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/autoversioner:latest'
+  - 'gcr.io/$PROJECT_ID/autoversioner:$COMMIT_SHA'
