--- a/container_images/autoversioner/Dockerfile
+++ b/container_images/autoversioner/Dockerfile
@@ -1,5 +1,8 @@
 FROM scratch
 
-WORKDIR /workspace
-ADD gopath/bin /
+COPY bin/tagger /
+COPY bin/versiongenerator /
+
+# for debugging
+COPY container_images/autoversioner/Dockerfile /
 
