Move build logic to container definition

--- a/container_images/autoversioner/Dockerfile
+++ b/container_images/autoversioner/Dockerfile
@@ -1,8 +1,19 @@
+FROM golang:alpine
+
+RUN apk add --no-cache git
+
+WORKDIR /
+
+# this needs to be run from root of googlecloudplatform/guest-test-infra
+COPY . /
+RUN CGO_ENABLED=0 go build -o /tagger ./autoversioner/cmd/tagger/main.go
+RUN CGO_ENABLED=0 go build -o /versiongenerator ./autoversioner/cmd/versiongenerator/main.go
+
+RUN chmod +x /tagger
+RUN chmod +x /versiongenerator
+
 FROM scratch
 
-COPY bin/tagger /
-COPY bin/versiongenerator /
-
-# for debugging
-COPY container_images/autoversioner/Dockerfile /
+COPY --from=0 tagger /tagger
+COPY --from=0 versiongenerator /versiongenerator
 
