--- a/container_images/cloudbuild.yaml
+++ b/container_images/cloudbuild.yaml
@@ -1,10 +1,3 @@
-options:
-  env:
-    - GO111MODULE=on
-    - GOPROXY=https://proxy.golang.org
-  volumes:
-    - name: go-modules
-      path: /go
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '--tag=gcr.io/$PROJECT_ID/gocheck:latest', '--tag=gcr.io/$PROJECT_ID/gocheck:$COMMIT_SHA', './container_images/gocheck']
@@ -18,14 +11,8 @@ steps:
   args: ['build', '--tag=gcr.io/$PROJECT_ID/selinux-tools:latest', '--tag=gcr.io/$PROJECT_ID/selinux-tools:$COMMIT_SHA', './container_images/selinux-tools']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '--tag=gcr.io/$PROJECT_ID/build-essential:latest', '--tag=gcr.io/$PROJECT_ID/build-essential:$COMMIT_SHA', './container_images/build-essential']
-- name: 'golang:1.12'
-  dir: './autoversioner/cmd/versiongenerator'
-  args: ["go","build","-o","/workspace/bin/versiongenerator","main.go"]
-- name: 'golang:1.12'
-  dir: './autoversioner/cmd/tagger'
-  args: ["go","build","-o","/workspace/bin/tagger","main.go"]
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '--tag=gcr.io/$PROJECT_ID/autoversioner:latest', '--file=./container_images/autoversioner/Dockerfile', "/workspace"]
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/autoversioner:latest', '--tag=gcr.io/$PROJECT_ID/autoversioner:$COMMIT_SHA', '--file=./container_images/autoversioner/Dockerfile', "/workspace"]
 images:
   - 'gcr.io/$PROJECT_ID/gocheck:latest'
   - 'gcr.io/$PROJECT_ID/gocheck:$COMMIT_SHA'
