Add tagging to postsibmit

--- a/container_images/autoversioner/Dockerfile
+++ b/container_images/autoversioner/Dockerfile
@@ -17,3 +17,5 @@ FROM scratch
 COPY --from=0 tagger /tagger
 COPY --from=0 versiongenerator /versiongenerator
 
+# for debugging
+COPY container_images/autoversioner/Dockerfile /
