--- a/container_images/packagebuilder/Dockerfile
+++ b/container_images/packagebuilder/Dockerfile
@@ -12,10 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 FROM gcr.io/compute-image-tools/daisy:latest
-
 FROM gcr.io/gcp-guest/autoversioner:latest
-
-#FROM alpine
 # Needed for gsutil.
 FROM google/cloud-sdk:alpine
 
@@ -28,12 +25,13 @@ WORKDIR /
 COPY --from=0 /daisy daisy
 # Daisy image copies this from gcr.io/distroless/base, we copy here.
 COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
-
 COPY --from=1 /tagger tagger
 COPY --from=1 /versiongenerator versiongenerator
 
+COPY ./packagebuild/* /
+
 # Copy this Dockerfile for debugging.
-COPY Dockerfile Dockerfile
-COPY main.sh main.sh
+COPY container_images/packagebuilder/Dockerfile Dockerfile
+COPY container_images/packagebuilder/main.sh main.sh
 
 ENTRYPOINT ["./main.sh"]
