generate tox.ini file.

--- a/container_images/pytest/Dockerfile
+++ b/container_images/pytest/Dockerfile
@@ -19,7 +19,7 @@ FROM python:3.6.11-slim-buster
 FROM python:3.7.8-slim-buster
 
 FROM python:3.8.5-slim-buster
-RUN pip3 install pip && pip3 install tox==3.19.0
+RUN pip3 install tox==3.19.0
 
 COPY --from=0 /usr/local/lib/python3.5/ /usr/local/lib/python3.5/
 COPY --from=0 /usr/local/lib/lib*3.5* /usr/local/lib/
@@ -40,5 +40,5 @@ RUN ldconfig
 
 WORKDIR /
 COPY Dockerfile Dockerfile
-COPY main.sh main.sh
-ENTRYPOINT ["/main.sh"]
+COPY main.py main.py
+ENTRYPOINT ["/main.py"]
