--- a/container_images/cloudbuild.yaml
+++ b/container_images/cloudbuild.yaml
@@ -16,7 +16,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '--tag=gcr.io/$PROJECT_ID/flake8:latest', '--tag=gcr.io/$PROJECT_ID/flake8:$COMMIT_SHA', './container_images/flake8']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '--tag=gcr.io/$PROJECT_ID/tox:latest', '--tag=gcr.io/$PROJECT_ID/tox:$COMMIT_SHA', './container_images/tox']
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/pytest:latest', '--tag=gcr.io/$PROJECT_ID/pytest:$COMMIT_SHA', './container_images/pytest']
 images:
   - 'gcr.io/$PROJECT_ID/gocheck:latest'
   - 'gcr.io/$PROJECT_ID/gocheck:$COMMIT_SHA'
@@ -34,5 +34,5 @@ images:
   - 'gcr.io/$PROJECT_ID/autoversioner:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/flake8:latest'
   - 'gcr.io/$PROJECT_ID/flake8:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/tox:latest'
-  - 'gcr.io/$PROJECT_ID/tox:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/pytest:latest'
+  - 'gcr.io/$PROJECT_ID/pytest:$COMMIT_SHA'
