--- a/concourse/tasks/daisy-build-images-debian.yaml
+++ b/concourse/tasks/daisy-build-images-debian.yaml
@@ -21,6 +21,6 @@ run:
   - -zone=us-central1-c
   - -var:build_date=((build_date))
   - -var:google_cloud_repo=((google_cloud_repo))
-  - -var:gcs-url=((gcs-url))
+  - -var:gcs_url=((gcs_url))
   - -compute_endpoint_override=https://www.googleapis.com/compute/beta/projects/
   - ./compute-image-tools/daisy_workflows/build-publish/((wf))
