--- a/concourse/tasks/daisy-build-images.yaml
+++ b/concourse/tasks/daisy-build-images.yaml
@@ -22,6 +22,6 @@ run:
   - -var:installer_iso=((iso))
   - -var:build_date=((build_date))
   - -var:google_cloud_repo=((google_cloud_repo))
-  - -var:gcs-url=((gcs-url))
+  - -var:gcs_url=((gcs_url))
   - -compute_endpoint_override=https://www.googleapis.com/compute/beta/projects/
   - ./compute-image-tools/daisy_workflows/build-publish/((wf))
