--- a/concourse/pipeline/guest-package-build.yaml
+++ b/concourse/pipeline/guest-package-build.yaml
@@ -88,7 +88,7 @@ jobs:
   - task: guest-package-build-guest-configs
     file: guest-test-infra/concourse/tasks/package-integration-test.yaml
     vars:
-      repo-name: "guest-configs"
+      repo-name: "guest-diskexpand"
 
 - name: build-guest-agent
   plan:
